--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
-  "name": "@uirouter/angular",
+  "name": "@clarivate/ui-router-angular",
   "description": "State-based routing for Angular",
-  "version": "7.0.0",
+  "version": "1.0.3",
   "scripts": {
     "clean": "shx rm -rf lib lib-esm _bundles _doc dist",
     "compile": "npm run clean && ngc",
@@ -43,9 +43,9 @@
   "license": "MIT",
   "distDir": "dist",
   "peerDependencies": {
-    "@angular/common": "^9.0.0 || ^10.0.0",
-    "@angular/core": "^9.0.0 || ^10.0.0",
-    "@uirouter/core": "^6.0.5",
+    "@angular/common": "^10.0.0 || ^11.0.0 || ^12.0.0",
+    "@angular/core": "^10.0.0 || ^11.0.0 || ^12.0.0",
+    "@uirouter/core": "^6.0.7",
     "@uirouter/rx": "^0.6.0"
   },
   "devDependencies": {
